--- a/haruhanip-batch/build.gradle
+++ b/haruhanip-batch/build.gradle
@@ -10,6 +10,15 @@ repositories {
 }
 
 dependencies {
+
+    implementation project(':haruhanip-common')
+    api project(':haruhanip-domain:domain-service')
+
+    // Batch
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    // Open AI
+    implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M6"
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
