--- a/haruhanip-domain/domain-redis/build.gradle
+++ b/haruhanip-domain/domain-redis/build.gradle
@@ -13,6 +13,12 @@ bootJar.enabled = false
 jar.enabled = true
 
 dependencies {
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    // jackson
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
