--- a/haruhanip-exteranl-api/build.gradle
+++ b/haruhanip-exteranl-api/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation project(':haruhanip-common')
     implementation project(':haruhanip-domain:domain-service')
+    implementation project(':haruhanip-batch')
 
     // Spring Boot Web
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -21,6 +22,14 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     // Jackson
     implementation("com.fasterxml.jackson.core:jackson-core:2.19.0")
+    // Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    // OAuth2 Client
+    api("org.springframework.boot:spring-boot-starter-oauth2-client")
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
