feat: 기능 구현 및 리팩토링

--- a/haruhanip-exteranl-api/build.gradle
+++ b/haruhanip-exteranl-api/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation project(':haruhanip-common')
     implementation project(':haruhanip-domain:domain-service')
     implementation project(':haruhanip-batch')
+    implementation project(':haruhanip-infra')
 
     // Spring Boot Web
     implementation 'org.springframework.boot:spring-boot-starter-web'
