--- a/haruhanip-infra/build.gradle
+++ b/haruhanip-infra/build.gradle
@@ -14,6 +14,9 @@ jar.enabled = true
 
 dependencies {
     implementation project(':haruhanip-common')
+    implementation project(':haruhanip-domain:domain-redis')
+    // Mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
